--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   :root {
@@ -13,7 +13,9 @@
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
 
-    --primary: 220.9 39.3% 11%;
+    /* --primary: 220.9 39.3% 11%; */
+    /* --primary-foreground: 210 20% 98%; */
+    --primary: 30 85% 15%;
     --primary-foreground: 210 20% 98%;
 
     --secondary: 220 14.3% 95.9%;
@@ -30,7 +32,7 @@
 
     --border: 220 13% 91%;
     --input: 220 13% 91%;
-    --ring: 224 71.4% 4.1%;
+    --ring: 30 85% 15%;
 
     --radius: 0.5rem;
   }
