--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   aspect-ratio: 1;
   border-radius: 50%;
   border: 8px solid #1f2937; /* Replace with the color value for primary.900 */
-  border-right-color: #6ee7b7; /* Replace with the color value for primary.200 */
+  border-right-color: #ff7513; /* Replace with the color value for primary.200 */
   animation: rotate 1s infinite linear;
 }
 
@@ -29,6 +29,41 @@
   border: 6px solid #696803; /* Replace with the color value for primary.200 */
   border-right-color: transparent;
   animation: rotate 1s infinite linear;
+}
+
+@keyframes dot-flashing {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.loading-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-dots .dot {
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  background: #696803; /* Replace with the color value for primary.200 */
+  border-radius: 50%;
+  animation: dot-flashing 1s infinite linear alternate;
+}
+
+.loading-dots .dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loading-dots .dot:nth-child(3) {
+  animation-delay: 0.4s;
 }
 
 @layer base {
